# libsql-python

./: Cargo.toml  cli_test.py  pyproject.toml
.github/workflows/: wheels.yml
examples/: execute_script.py  remote_connect.py  sync_write.py  vector.py
examples/batch/: main.py
examples/encryption/: main.py
examples/local/: main.py
examples/memory/: main.py
examples/remote/: main.py
examples/sqlalchemy/: example.py
examples/sync/: main.py
examples/transaction/: main.py
examples/vector/: main.py
src/: lib.rs
