[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "aiolibsql"
version = "0.2.8"
description = "A fully asynchronous Python wrapper for libSQL, built with Rust and PyO3"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["libsql", "sqlite", "async", "database", "turso"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/fuhnut/aiolibsql"
Repository = "https://github.com/fuhnut/aiolibsql"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "aiolibsql"
